--- a/Daily/2025-07-17.md
+++ b/Daily/2025-07-17.md
@@ -6,9 +6,13 @@ tags: [daily]
 # Daily Note - 2025-07-17
 
 > [!todo] ToDo
-> - [ ] 洗濯
-> - [ ] ゴミ捨て
+> - [x] 洗濯
+> - [x] ゴミ捨て
 
 > [!abstract] References
 > - [Claude？Gemini？いや、それでもGithub Copilotを使い続けるという話 #githubcopilot - Qiita](https://qiita.com/CinnamonSea2073/items/4bca9196723ac48e40b2)
 > - [単なるメモから知的資産へ：Obsidian in Cursorで構築する知的生産システム｜松濤Vimmer](https://note.com/shotovim/n/n5833578984bf)
+
+> [!note] Notes
+> - Obsidianでシフト管理とタスク管理を可能にした
+> - 明日は情報技術資格の課題とソフトウェア工学のテスト対策をしたいと思う。
