--- a/JobHunt/Experience/自ら調べたり工夫しながら取り組んだ経験.md
+++ b/JobHunt/Experience/自ら調べたり工夫しながら取り組んだ経験.md
@@ -1,5 +1,7 @@
 #  自ら調べたり工夫したりしながら取り組んだ経験
 
+**タグ**: #経験 #個人開発 #技術学習 #問題解決 #CCNA #React #TypeScript
+
 ## 背景
 
 在学中、音楽ファイルを一元管理し、どのデバイスからも安全にアクセスできる環境を実現するため、Dockerを活用した音楽ストリーミングサーバーの構築に取り組みました。  
@@ -41,5 +43,3 @@
 - 技術的課題にも粘り強く取り組む姿勢を確立。
 - 映画情報アプリでは、実装から設計改善までを一貫して行うことで、チーム開発でも意図の伝わるコードを書くための基礎力を習得。
 - 今後も初見の技術に臆することなく、能動的に学習と改善を継続していきたいと考えています。
-
-#Tags: #経験 #個人開発 #技術学習 #問題解決 #CCNA #React #TypeScript
