--- a/JobHunt/Experience/音楽サーバー.md
+++ b/JobHunt/Experience/音楽サーバー.md
@@ -1,4 +1,7 @@
+
 # 音楽ストリーミングサーバーの構築
+
+**タグ**: #経験 #個人開発 #サーバー構築 #ネットワーク #Docker #CCNA
 
 ## 概要（どんな課題を解決したか・目的）
 
@@ -31,5 +34,3 @@
 当初はネットワークやポートの概念を理解しておらず断念しましたが、それを機にネットワークを体系的に学ぼうと考え、独学でCCNAの取得を目指しました。範囲が広く学習は困難でしたが、パケットトレーサーでの検証や実機設定を通して知識を定着させ、合格に至りました。
 
 再挑戦後は、DNSやポートの仕組みを理解したことで全体像をつかみやすくなり、WSL特有のネットワーク課題にも対処できるようになりました。`netstat`で疎通を確認し、Windows・WSLの設定を調整することで外部公開に成功しました。この経験を通じて、ネットワークに対する理解が飛躍的に深まり、課題に対して粘り強く取り組む姿勢が養われました。
-
-#Tags: #経験 #個人開発 #サーバー構築 #ネットワーク #Docker #CCNA
