--- a/JobHunt/CompanyResearch/サイボウズ株式会社.md
+++ b/JobHunt/CompanyResearch/サイボウズ株式会社.md
@@ -1,5 +1,7 @@
 # サイボウズ株式会社 企業研究ノート
 
+**タグ**: #企業研究 #サイボウズ #就職活動 #グループウェア #働き方改革
+
 ## 1. 企業概要
 
 - **会社名**: サイボウズ株式会社 (Cybozu, Inc.)
@@ -46,5 +48,3 @@
 - kintoneは単なるグループウェアに留まらず、企業のDXを推進するプラットフォームとして大きな成長ポテンシャルを秘めている。
 - 離職率の劇的な改善は、経営陣と従業員が一体となって本質的な課題解決に取り組んだ結果であり、組織開発の成功事例として学ぶべき点が多い。
 - 選考においては、単なるスキルマッチだけでなく、企業文化や価値観へのフィットが極めて重視されると予想される。
-
-#Tags: #企業研究 #サイボウズ #就職活動 #グループウェア #働き方改革
