Gemini: Quick Capture processing - Updated University tasks.

--- a/Daily/2025-07-22.md
+++ b/Daily/2025-07-22.md
@@ -6,7 +6,12 @@ tags: [daily]
 # Daily Note - 2025-07-22
 
 > [!todo] ToDo
-> - [ ] 心理学テスト
-> - [ ] ソフトウェア工学テスト
+> - [x] 心理学テスト
+> - [x] ソフトウェア工学テスト
 > - [ ] SPI対策
 > - [ ] 20時 ブロスタ
+
+> [!memo] Memo
+> - しっかりしてくれって感じ
+> - 無駄な空き時間を作らないようにすべき
+> - 学校のジム行くなら４限の後のみとする
