chore: Inflow整理とDailyNote修正

--- a/Daily/2025-07-22.md
+++ b/Daily/2025-07-22.md
@@ -9,7 +9,7 @@ tags: [daily]
 > - [x] 心理学テスト
 > - [x] ソフトウェア工学テスト
 > - [ ] SPI対策
-> - [ ] 20時 ブロスタ
+> - [x] 20時 ブロスタ
 
 > [!memo] Memo
 > - しっかりしてくれって感じ
