--- a/Daily/2025-07-23.md
+++ b/Daily/2025-07-23.md
@@ -7,11 +7,14 @@ tags: [daily]
 
 > [!todo] ToDo
 > - [ ] SPI対策
-> - [ ] 情報工学特別講義の課題
-> - [ ] movie-appのスタイリングをする
+> - [x] 情報工学特別講義の課題
+> - [x] movie-appのスタイリングをする
 > - [ ] ゴミ捨て
-> - [ ] 買い物
-> - [ ] 洗濯
+> - [x] 買い物
+> - [x] 洗濯
 
 > [!memo] Memo
 > - SPI対策は学校でやると良いかも
+> - 面接の流れが見えてきた
+> - 想定質問の回答をいくつか考える必要がある
+> - カレンダーの自動追加がうまくいっていない
