chore: Inflow整理とDailyNote作成 (2025-07-30)

--- a/Daily/2025-07-29.md
+++ b/Daily/2025-07-29.md
@@ -6,7 +6,7 @@ tags: [daily]
 # Daily Note - 2025-07-29
 
 > [!todo] ToDo
-> - [ ] SPI対策
-> - [ ] スケジュール管理
-> - [ ] テスト対策
+> - [x] SPI対策
+> - [x] スケジュール管理
+> - [x] テスト対策
 > - [ ] 個人開発のフロー見直し
