feat(Inflow): _QuickCapture.mdの内容を整理し、各ノートに追記

--- a/Daily/2025-07-30.md
+++ b/Daily/2025-07-30.md
@@ -6,9 +6,10 @@ tags: [daily]
 # Daily Note - 2025-07-30
 
 > [!todo] ToDo
-> - [ ] 買い物
+> - [x] 買い物
 > - [ ] 個人開発の見直し
 > - [x] SPI対策
-> - [ ] 自己分析
+> - [x] 自己分析
 
-
+> [!memo] Memo
+> - 分散学習が一番大事
