feat: Inflowの内容をデイリーノートに反映

--- a/Daily/2025-07-31.md
+++ b/Daily/2025-07-31.md
@@ -6,6 +6,9 @@ tags: [daily]
 # Daily Note - 2025-07-31
 
 > [!todo] ToDo
-> - [ ] SPI対策
+> - [x] SPI対策
 > - [ ] 個人開発の見直し
-> - [ ] 自己分析
+> - [x] 自己分析
+
+> [!memo] Memo
+> - もう８月
