docs(daily): Inflowの内容をデイリーノートに反映

--- a/Daily/2025-08-02.md
+++ b/Daily/2025-08-02.md
@@ -6,7 +6,10 @@ tags: [daily]
 # Daily Note - 2025-08-02
 
 > [!todo] ToDo
-> - [ ] シフト
+> - [x] シフト
 > - [ ] シフト管理
 > - [ ] SPI対策
 > - [ ] 個人開発
+
+> [!memo] Memo
+> - 目が腫れてしんどかった
