feat(notes): Inflowを整理し、デイリーノートとタスクを更新

--- a/Daily/2025-08-06.md
+++ b/Daily/2025-08-06.md
@@ -6,9 +6,14 @@ tags: [daily]
 # Daily Note - 2025-08-06
 
 > [!todo] ToDo
-> - [ ] 洗濯
+> - [x] 洗濯
 > - [ ] 掃除
-> - [ ] バイト
+> - [x] バイト
 > - [ ] SPI対策
-> - [ ] 自己分析
+> - [x] 自己分析
 > - [ ] 個人開発
+
+> [!memo] Memo
+> - ユニリタの説明会に遅刻
+> - スケジュール管理がザルすぎる
+> - 対策を講じる必要がある
