chore(inflow): Inflowを整理し、今日のメモと明日のToDoを更新

--- a/Daily/2025-08-08.md
+++ b/Daily/2025-08-08.md
@@ -6,4 +6,9 @@ tags: [daily]
 # Daily Note - 2025-08-08
 
 > [!todo] ToDo
-> - [ ] バーベキュー予約
+> - [x] バーベキュー予約
+
+> [!memo] Memo
+> - かいとと久しぶりにブロスタをした
+> - 彼は仕事をサボって私に電話をかけてきます
+> - また彼は私に電話をかけてくると言っていました
