feat: Update daily notes for 2025-08-09 and 2025-08-10

--- a/Daily/2025-08-09.md
+++ b/Daily/2025-08-09.md
@@ -8,4 +8,8 @@ tags: [daily]
 > [!todo] ToDo
 > - [ ] 洗濯
 > - [ ] SPI対策
-> - [ ] バイト
+> - [x] バイト
+
+> [!memo] Memo
+> - アニメ含めて夜まではSNSをシャットアウト
+> - 昼食後のダレやすいタイミングの対策を考案すべき
